# find-evm-routes

./: .env.example  Cargo.toml  config.toml
cli/: Cargo.toml
cli/src/: config.rs  dex_contracts.rs  main.rs
pool-algorithms/: Cargo.toml
pool-algorithms/src/: lib.rs
pool-algorithms/tests/: optimal_split.rs
