[workspace]
resolver = "3"
members = [
    "pool-algorithms",
    "cli"
]

[workspace.dependencies]
alloy = { version = "1.0.9", features = ["provider-ws", "sol-types", "reqwest" ] }
anyhow = "1.0.98"
dotenvy = "0.15"
futures = "0.3"
governor = "0.10.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
pool-algorithms = { path = "pool-algorithms" }
proptest = "1.7.0"
rand = "0.9.1"
serde = "1"
