[package]
name = "find-evm-routes"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
futures.workspace = true
governor.workspace = true
pool-algorithms.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true